--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Child Development</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="milestone_list_fragment_label">{age}</string>
+    <string name="milestone_list_fragment_label">age</string>
     <string name="age_list_fragment_label">Pick an age range</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
