--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="age_list_fragment_label">Pick an age range</string>
     <string name="activities_list_fragment_label">Activities</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="database_version">child_development.database_version</string>
+    <string name="file_key">child_development.shared_preferences</string>
+    <string name="default_database_version">version 0</string>
+
 </resources>
